compiler/testData/diagnostics/tests/properties/backingField/trivialExplicitBackingFIeld.kt
class A {
    <!MUST_BE_INITIALIZED_OR_BE_ABSTRACT!>val number: Number<!>
        <!EXPLICIT_BACKING_FIELDS_UNSUPPORTED!>field = 1<!>
}
